src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakable__c</fullName>
        <label>Breakable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_Item__c</fullName>
        <description>let op, moet eenheid zijn waarop wordt afgeroepen.</description>
        <inlineHelpText>let op, moet eenheid zijn waarop wordt afgeroepen.</inlineHelpText>
        <label>Description Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diameter__c</fullName>
        <inlineHelpText>Diameter in mm</inlineHelpText>
        <label>Diameter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Hoogte in milimeters</description>
        <inlineHelpText>Hoogte in milimeters</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kind_Of_Packages__c</fullName>
        <inlineHelpText>Let op: de geselecteerde verpakking moet de eenheid zijn waarop het item afgeroepen gaat worden. Dus per stuk leveren is verpakking stuks of als de klant het per doos wil is de verpakking doos</inlineHelpText>
        <label>Kind Of Packages</label>
        <picklist>
            <picklistValues>
                <fullName>Balen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deellading vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flessen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Hout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasbok Staal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA BAM Kar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haspels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kooikar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kratten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los gestort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stuks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volledige vrachtwagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakken</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kleur__c</fullName>
        <label>Kleur</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antraciet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beuken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bordeaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donkerblauw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eiken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grijs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kersen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lichtblauw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oranje</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zwart</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Lengte in milimeters</description>
        <inlineHelpText>Lengte in milimeters</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materiaal__c</fullName>
        <label>Materiaal</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunststof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metaal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plexiglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trespa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merk__c</fullName>
        <label>Merk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Units_Per_Package__c</fullName>
        <label>Number Of Units Per Package</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opmerkingen__c</fullName>
        <label>Opmerkingen</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sizes__c</fullName>
        <formula>&apos;L: &apos; +TEXT(Length__c)+ &apos; x W: &apos;+ TEXT(Width__c) + &apos; x H: &apos; + TEXT(Height__c)</formula>
        <label>Sizes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staat__c</fullName>
        <label>Staat</label>
        <picklist>
            <picklistValues>
                <fullName>Beschadigd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gebruikt &gt; Inzetbaar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gebruikt &gt; Inzetbaar &gt; Gedemonteerd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gebruikt &gt; Niet inzetbaar &gt; Repareren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gebruikt &gt; Niet inzetbaar &gt; Schoonmaken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gereviseerd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nader te bepalen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nieuw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onbekend</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leverancier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toelichting__c</fullName>
        <label>Toelichting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>Volume in m3</description>
        <inlineHelpText>Volume in m3</inlineHelpText>
        <label>Volume</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Gewicht in KG</description>
        <inlineHelpText>Gewicht in KG</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Breedte in milimeters</description>
        <inlineHelpText>Breedte in milimeters</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>Alle_Items</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Description_Item__c</columns>
        <columns>Kind_Of_Packages__c</columns>
        <columns>Number_Of_Units_Per_Package__c</columns>
        <columns>Weight__c</columns>
        <columns>Article_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Items</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Standaard_Lay_Out_GSA</fullName>
        <columns>NAME</columns>
        <columns>Merk__c</columns>
        <columns>Supplier__c</columns>
        <columns>Kind_Of_Packages__c</columns>
        <columns>Kleur__c</columns>
        <filterScope>Everything</filterScope>
        <label>Standaard Lay Out GSA</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>